<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app -->
    <string name="app_name">EliteSelfHelp</string>

    <!-- goods_ -->
    <string name="goods_curr_rmb">"￥"</string>
    <string name="goods_Price_x">"x"</string>
    <string name="goods_price_0">"0.00"</string>
    <string name="goods_name">"货品"</string>
    <string name="goods_number">"数量"</string>
    <string name="goods_amount">"总金额"</string>
    <string name="goods_subtotal">"小计"</string>
    <string name="goods_total">"总计："</string>
    <string name="goods_payment">"收款："</string>
    <string name="goods_change">"找零："</string>
    <string name="goods_unit_price">"单价"</string>
    <string name="goods_stock_show">"库存  "</string>
    <string name="goods_pay_confirm">"确认付款"</string>
    <string name="goods_all_clear">"清空所有"</string>
    <string name="goods_add_list">"加入清单"</string>
    <string name="goods_drugs_query">"商品查询"</string>
    <string name="goods_order_query">"订单查询"</string>
    <string name="goods_print_ticket">"补打小票"</string>
    <string name="goods_print_paper">"打印机缺纸"</string>
    <string name="goods_print_error">"打印机故障"</string>
    <string name="goods_print_connect_no">"打印机未连接"</string>
    <string name="goods_pay_type">"请使用微信、支付宝扫码支付"</string>

    <!-- attribute -->
    <string name="goods_attribute_00">"商品详情"</string>
    <string name="goods_attribute_01">"商品名称"</string>
    <string name="goods_attribute_02">"条形编码"</string>
    <string name="goods_attribute_03">"销售价格"</string>
    <string name="goods_attribute_04">"销售单位"</string>
    <string name="goods_attribute_05">"商品规格"</string>
    <string name="goods_attribute_06">"商品库存"</string>
    <string name="goods_attribute_07">"主要成分"</string>
    <string name="goods_attribute_08">"食用禁忌"</string>
    <string name="goods_attribute_09">"用法用量"</string>
    <string name="goods_attribute_10">"有效期限"</string>
    <string name="goods_attribute_11">"批准文号"</string>
    <string name="goods_attribute_12">"生产厂家"</string>
    <string name="goods_attribute_13">"注意事项"</string>

    <!-- order -->
    <string name="order_code">"订单编号"</string>
    <string name="order_total">"订单金额"</string>
    <string name="order_goods_num">"商品数量"</string>
    <string name="order_print_sn">"单据编号"</string>
    <string name="order_create_time">"交易时间"</string>

    <!-- pay -->
    <string name="pay_error_info">"支付信息出现错误！请稍后重试！"</string>
    <string name="pay_error_parameter">"支付参数错误！请稍后重试！"</string>
    <string name="pay_type_hint">"请使用微信、支付宝扫一扫支付"</string>

    <!-- setting -->
    <string name="setting">设置</string>
    <string name="setting_title">"参数配置"</string>
    <string name="setting_item_01">"打印配置"</string>
    <string name="setting_item_02">"小票模板"</string>
    <string name="setting_item_03">"其它配置"</string>
    <string name="setting_item_04">"版本信息"</string>
    <string name="setting_text_usb">"USB"</string>
    <string name="setting_text_serial">"串口"</string>
    <string name="setting_text_port">"端&#160;&#160;&#160;&#160;口："</string>
    <string name="setting_text_baud">"波特率："</string>
    <string name="setting_text_connect">"连接"</string>
    <string name="setting_text_connect_no">"断开连接"</string>
    <string name="setting_test_fail">"串口没有读/写权限！"</string>
    <string name="setting_text_width">"纸张宽度"</string>
    <string name="setting_text_width_58">"58mm"</string>
    <string name="setting_text_width_80">"80mm"</string>
    <string name="setting_text_width_100">"100mm"</string>
    <string name="setting_active_code">"激活编码："</string>
    <string name="setting_active_hint">"请输入支付激活码"</string>
    <string name="setting_active_go">"激活设备"</string>
    <string name="setting_active_un">"反激活设备"</string>
    <string name="setting_text_password">"管理密码："</string>
    <string name="setting_butn_password">"设置密码"</string>
    <string name="setting_hint_password">"请设置6位数字密码"</string>
    <string name="setting_null_password">"密码不能为空"</string>
    <string name="setting_succ_password">"设置密码成功"</string>
    <string name="setting_function_1">"功能简介："</string>
    <string name="setting_function_2">"1、Http联网同步后台服务器数据源；\n2、分类查看、关键字搜索商品信息；\n3、扫码或输入商品条形码自助下单；\n4、使用微信、支付宝扫码支付结账；"</string>
    <string name="setting_version_name">"当前版本：v"</string>

    <!-- print -->
    <string name="print_edit_eg">模板编辑—勾选并完整输入(列如—设备编号：SN0008)</string>
    <string name="print_edit_function">功能选项</string>
    <string name="print_print_bar_code">打印条形码</string>
    <string name="print_title">亿利达店</string>
    <string name="print_number">设备编号：SN0008</string>
    <string name="print_code">单据编号：</string>
    <string name="print_time">交易时间：</string>
    <string name="print_note_title">品名;单价;数量;金额</string>
    <string name="print_bill_1">驱风油</string>
    <string name="print_bill_2">口服液</string>
    <string name="print_total_price">总计：</string>
    <string name="print_pay_type">付款方式：自助收银移动扫码支付</string>
    <string name="print_company_name">公司名称：深圳市亿利达商业设备有限公司</string>
    <string name="print_company_urls">公司网址：www.szelite.net</string>
    <string name="print_company_adds">公司地址：深圳市南山区南山大道亿利达大厦十三层</string>
    <string name="print_company_call">联系电话：0755-88888888</string>
    <string name="print_company_line">服务专线：4008-888-888</string>
    <string name="print_thanks">谢谢惠顾,欢迎再次光临！</string>

    <!-- network -->
    <string name="network">网络</string>
    <string name="network_closed">未能连接到...</string>
    <string name="network_fault">请检查您的网络连接</string>
    <string name="network_no_wifi">检测到您当前未使用Wifi，建议您在Wifi网络下观看视频</string>

    <!-- other -->
    <string name="cancel">"取消"</string>
    <string name="confirm">"确定"</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="confirm_clear">"清空确认"</string>
    <string name="confirm_clear_bill">"您确认要清空所有商品么？"</string>
    <string name="confirm_delete">"删除确认"</string>
    <string name="confirm_delete_bill">"您确认要删除此商品么？"</string>
    <string name="text_switch">"切换"</string>
    <string name="text_self_help">"自助买单"</string>
    <string name="text_select_serial_port">"请选择串口"</string>
    <string name="text_password_input">"请输入管理员密码"</string>
    <string name="text_password_error">"密码错误！请重新输入！"</string>
    <string name="text_input_code">"请输入商品条形码"</string>
    <string name="text_input_code_hint">"扫描或输入商品条形码"</string>
    <string name="text_input_code_error">"无效的商品条形码"</string>
    <string name="text_input_keyword_hint">"商品码、名称、关键字等搜索"</string>
    <string name="text_input_keyword_null">"未匹配到与关键字相关的商品"</string>

</resources>