<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_10"
    android:background="@color/text_color_white"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/setting_edit_tv"
                android:drawableLeft="@null"
                android:text="@string/print_edit_eg"/>

            <LinearLayout style="@style/setting_edit_ll">

                <TextView
                    android:id="@+id/setting_print_edit_tv_1"
                    style="@style/setting_edit_tv"/>

                <EditText
                    android:id="@+id/setting_print_edit_et_1"
                    style="@style/setting_edit_et"
                    android:gravity="center"
                    android:hint="@string/print_title"/>
            </LinearLayout>

            <LinearLayout style="@style/setting_edit_ll">

                <TextView
                    android:id="@+id/setting_print_edit_tv_2"
                    style="@style/setting_edit_tv"/>

                <EditText
                    android:id="@+id/setting_print_edit_et_2"
                    style="@style/setting_edit_et"
                    android:hint="@string/print_number"/>
            </LinearLayout>

            <LinearLayout style="@style/setting_edit_ll">

                <TextView
                    android:id="@+id/setting_print_edit_tv_3"
                    style="@style/setting_edit_tv"/>

                <EditText
                    android:id="@+id/setting_print_edit_et_3"
                    style="@style/setting_edit_et"
                    android:hint="@string/print_company_name"/>
            </LinearLayout>

            <LinearLayout style="@style/setting_edit_ll">

                <TextView
                    android:id="@+id/setting_print_edit_tv_4"
                    style="@style/setting_edit_tv"/>

                <EditText
                    android:id="@+id/setting_print_edit_et_4"
                    style="@style/setting_edit_et"
                    android:hint="@string/print_company_urls"/>
            </LinearLayout>

            <LinearLayout style="@style/setting_edit_ll">

                <TextView
                    android:id="@+id/setting_print_edit_tv_5"
                    style="@style/setting_edit_tv"/>

                <EditText
                    android:id="@+id/setting_print_edit_et_5"
                    style="@style/setting_edit_et"
                    android:hint="@string/print_company_adds"/>
            </LinearLayout>

            <LinearLayout style="@style/setting_edit_ll">

                <TextView
                    android:id="@+id/setting_print_edit_tv_6"
                    style="@style/setting_edit_tv"/>

                <EditText
                    android:id="@+id/setting_print_edit_et_6"
                    style="@style/setting_edit_et"
                    android:hint="@string/print_company_call"/>
            </LinearLayout>

            <LinearLayout style="@style/setting_edit_ll">

                <TextView
                    android:id="@+id/setting_print_edit_tv_7"
                    style="@style/setting_edit_tv"/>

                <EditText
                    android:id="@+id/setting_print_edit_et_7"
                    style="@style/setting_edit_et"
                    android:hint="@string/print_company_line"/>
            </LinearLayout>

            <TextView
                style="@style/setting_edit_tv"
                android:drawableLeft="@null"
                android:layout_marginTop="@dimen/margin_padding_30"
                android:text="@string/print_edit_function"/>

            <TextView
                android:id="@+id/setting_print_edit_tv_8"
                style="@style/setting_edit_tv"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/margin_padding_15"
                android:layout_marginTop="@dimen/margin_padding_10"
                android:text="@string/print_print_bar_code"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <include
            android:id="@+id/setting_print_stencil"
            layout="@layout/layout_print_stencil"/>
    </RelativeLayout>
</LinearLayout>