<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_15"
    android:background="@color/text_color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/printer_tv_usb"
            style="@style/setting_printer_tv"
            android:drawableLeft="@drawable/selector_printer_tv_type"
            android:drawablePadding="@dimen/margin_padding_10"
            android:text="@string/setting_text_usb"/>

        <TextView
            android:id="@+id/printer_tv_usb_port"
            style="@style/setting_printer_tv"
            android:layout_marginLeft="@dimen/margin_padding_30"
            android:text="@string/setting_text_port"/>

        <Spinner
            android:id="@+id/printer_sp_usb_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_10"
            style="@android:style/Widget.Holo.Light.Spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/printer_tv_serial"
            style="@style/setting_printer_tv"
            android:drawableLeft="@drawable/selector_printer_tv_type"
            android:drawablePadding="@dimen/margin_padding_5"
            android:text="@string/setting_text_serial"/>

        <TextView
            android:id="@+id/printer_tv_serial_port"
            style="@style/setting_printer_tv"
            android:layout_marginLeft="@dimen/margin_padding_30"
            android:text="@string/setting_text_port"/>

        <Spinner
            android:id="@+id/printer_sp_serial_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_10"
            style="@android:style/Widget.Holo.Light.Spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/printer_tv_serial_baud"
            style="@style/setting_printer_tv"
            android:layout_marginLeft="@dimen/margin_padding_130"
            android:text="@string/setting_text_baud"/>

        <Spinner
            android:id="@+id/printer_sp_serial_baud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_10"
            style="@android:style/Widget.Holo.Light.Spinner"/>
    </LinearLayout>

    <Button
        android:id="@+id/printer_bt_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_buttom_state_4"
        android:layout_marginTop="@dimen/margin_padding_50"
        android:padding="@dimen/margin_padding_15"
        android:text="@string/setting_text_connect"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/text_color_btn_w"/>

    <TextView
        style="@style/setting_printer_tv"
        android:layout_marginTop="@dimen/margin_padding_50"
        android:text="@string/setting_text_width"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/printer_tv_size_1"
            style="@style/setting_printer_tv_size"
            android:text="@string/setting_text_width_58"/>

        <TextView
            android:id="@+id/printer_tv_size_2"
            style="@style/setting_printer_tv_size"
            android:text="@string/setting_text_width_80"/>

        <TextView
            android:id="@+id/printer_tv_size_3"
            style="@style/setting_printer_tv_size"
            android:text="@string/setting_text_width_100"/>
    </LinearLayout>
</LinearLayout>