<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color_appui"
    android:padding="@dimen/margin_padding_15"
    android:orientation="vertical">

    <include layout="@layout/layout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bg_border_state_4"
        android:padding="@dimen/margin_padding_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/margin_padding_10"
            android:paddingBottom="@dimen/margin_padding_10"
            android:background="@drawable/shape_bg_buttom_state_4"
            android:orientation="horizontal">

            <TextView
                style="@style/goods_head_tv"
                android:layout_weight="6"
                android:paddingLeft="@dimen/margin_padding_10"
                android:text="@string/order_code"/>

            <TextView
                style="@style/goods_head_tv"
                android:text="@string/order_total"/>

            <TextView
                style="@style/goods_head_tv"
                android:text="@string/order_goods_num"/>

            <TextView
                style="@style/goods_head_tv"
                android:text="@string/order_print_sn"
                android:layout_weight="5"/>

            <TextView
                style="@style/goods_head_tv"
                android:layout_weight="5"
                android:layout_marginRight="@dimen/margin_padding_45"
                android:text="@string/order_create_time"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/order_rv_lists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
