<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_15"
    android:background="@color/text_color_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/version_tv_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_version_name"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/text_color_conte"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_function_1"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/text_color_conte"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_function_2"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/text_color_conte"/>
    </LinearLayout>

</LinearLayout>