<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_padding_15"
    android:background="@color/text_color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_active_code"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/text_color_title"/>

        <EditText
            android:id="@+id/setting_et_active"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_border_state_4"
            android:padding="@dimen/margin_padding_5"
            android:gravity="center"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/setting_active_hint"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_conte"
            android:textColorHint="@color/text_color_input"/>

        <Button
            android:id="@+id/setting_bt_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_30"
            android:paddingLeft="@dimen/margin_padding_15"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingRight="@dimen/margin_padding_15"
            android:paddingBottom="@dimen/margin_padding_5"
            android:background="@drawable/shape_bg_buttom_state_4"
            android:text="@string/setting_active_go"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_text_password"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/text_color_title"/>

        <EditText
            android:id="@+id/setting_et_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_border_state_4"
            android:padding="@dimen/margin_padding_5"
            android:gravity="center"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/setting_hint_password"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_conte"
            android:textColorHint="@color/text_color_input"/>

        <Button
            android:id="@+id/setting_bt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_30"
            android:paddingLeft="@dimen/margin_padding_15"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingRight="@dimen/margin_padding_15"
            android:paddingBottom="@dimen/margin_padding_5"
            android:background="@drawable/shape_bg_buttom_state_4"
            android:text="@string/setting_butn_password"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_white"/>
    </LinearLayout>
</LinearLayout>